--- a/app/src/main/res/layout/playlist_overview_card_full.xml
+++ b/app/src/main/res/layout/playlist_overview_card_full.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/overview_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/material_baseline_grid_2x"
-    android:layout_marginEnd="@dimen/material_baseline_grid_2x"
-    android:layout_marginTop="@dimen/material_baseline_grid_1x"
-    android:layout_marginBottom="@dimen/material_baseline_grid_1x"
-    android:animateLayoutChanges="true"
-    android:padding="@dimen/material_card_edge_margin"
-    app:cardCornerRadius="4dp"
-    app:cardElevation="@dimen/material_card_elevation_resting"
-    app:cardPreventCornerOverlap="true"
-    app:cardUseCompatPadding="true">
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/overview_card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/material_baseline_grid_1x"
+        android:layout_marginEnd="@dimen/material_baseline_grid_2x"
+        android:layout_marginStart="@dimen/material_baseline_grid_2x"
+        android:layout_marginTop="@dimen/material_baseline_grid_1x"
+        android:animateLayoutChanges="true"
+        android:padding="@dimen/material_card_edge_margin"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="@dimen/material_card_elevation_resting"
+        app:cardPreventCornerOverlap="true">
 
 
         <include
@@ -22,4 +24,5 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-</android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>
+</FrameLayout>
