Changes to drawable

--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -7,21 +7,8 @@
 
     <item>
         <bitmap
+            android:gravity="center|bottom"
             android:src="@drawable/playerunknowns_battlegrounds_guy"/>
-    </item>
-
-</layer-list>
-<?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item>
-        <color android:color="@color/colorPrimary"/>
-    </item>
-
-    <item>
-        <bitmap
-            android:gravity="center"
-            android:src="@drawable/playerunknown_intro"/>
     </item>
 
 </layer-list>
