--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -19,23 +19,26 @@
             android:layout_height="match_parent"
             app:emptyLayout="@layout/empty_layout"
             app:state="empty"
-            app:stateTextAppearance="@style/TextAppearance.AppCompat"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            app:stateTextAppearance="@style/TextAppearance.AppCompat">
 
             <android.support.v4.widget.SwipeRefreshLayout
                 android:id="@+id/refresh"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior">
+                android:layout_height="match_parent">
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/history_recycler_view"
+                <android.support.v4.widget.NestedScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+                    android:layout_height="match_parent">
 
 
-                </android.support.v7.widget.RecyclerView>
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/history_recycler_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+
+                    </android.support.v7.widget.RecyclerView>
+                </android.support.v4.widget.NestedScrollView>
             </android.support.v4.widget.SwipeRefreshLayout>
         </me.calebjones.pubgtrackerforandroid.ui.views.ExtendedStatefulLayout>
 
@@ -136,9 +139,10 @@
         android:id="@+id/sort_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/navigation_view"
         android:layout_gravity="bottom|end"
-        android:layout_marginEnd="@dimen/material_baseline_grid_3x"
         android:layout_marginBottom="@dimen/material_baseline_grid_8x"
+        android:layout_marginEnd="@dimen/material_baseline_grid_3x"
         android:clickable="true"
         app:backgroundTint="@color/colorAccentAlt"
         app:borderWidth="0dp"
@@ -146,7 +150,6 @@
         app:ico_color="@android:color/white"
         app:ico_icon="gmd-filter-list"
         app:ico_size="24dp"
-        android:layout_above="@+id/navigation_view"
         app:layout_anchorGravity="bottom|right|end"
         app:pressedTranslationZ="6dp"
         app:rippleColor="@color/material_color_white_50_percent" />
