--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -4,8 +4,8 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/md_dark_background"
+    android:orientation="vertical"
     android:theme="@style/AppTheme">
 
     <FrameLayout
@@ -22,31 +22,37 @@
             app:state="empty"
             app:stateTextAppearance="@style/TextAppearance.AppCompat">
 
-            <android.support.v4.widget.NestedScrollView
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/refresh"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <LinearLayout
+                <android.support.v4.widget.NestedScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent">
 
-                    <me.calebjones.pubgtrackerforandroid.ui.views.PlaylistView
-                        android:id="@+id/solo_playlist"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
 
-                    <me.calebjones.pubgtrackerforandroid.ui.views.PlaylistView
-                        android:id="@+id/duo_playlist"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        <me.calebjones.pubgtrackerforandroid.ui.views.PlaylistView
+                            android:id="@+id/solo_playlist"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
 
-                    <me.calebjones.pubgtrackerforandroid.ui.views.PlaylistView
-                        android:id="@+id/squad_playlist"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                </LinearLayout>
-            </android.support.v4.widget.NestedScrollView>
+                        <me.calebjones.pubgtrackerforandroid.ui.views.PlaylistView
+                            android:id="@+id/duo_playlist"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                        <me.calebjones.pubgtrackerforandroid.ui.views.PlaylistView
+                            android:id="@+id/squad_playlist"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+                </android.support.v4.widget.NestedScrollView>
+            </android.support.v4.widget.SwipeRefreshLayout>
 
         </me.calebjones.pubgtrackerforandroid.ui.views.ExtendedStatefulLayout>
 
@@ -98,8 +104,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal">
 
                 <android.support.v7.widget.AppCompatButton
                     android:id="@+id/history_sort_reset"
@@ -131,8 +136,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginEnd="@dimen/material_baseline_grid_3x"
         android:layout_marginBottom="@dimen/material_baseline_grid_8x"
+        android:layout_marginEnd="@dimen/material_baseline_grid_3x"
         android:clickable="true"
         app:backgroundTint="@color/colorAccent"
         app:borderWidth="0dp"
