--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -21,25 +21,19 @@
             app:state="empty"
             app:stateTextAppearance="@style/TextAppearance.AppCompat">
 
-            <android.support.v4.widget.SwipeRefreshLayout
-                android:id="@+id/refresh"
+            <android.support.v4.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <android.support.v4.widget.NestedScrollView
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/history_recycler_view"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:paddingBottom="@dimen/material_baseline_grid_8x"
+                    android:clipToPadding="false">
 
-
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/history_recycler_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-
-                    </android.support.v7.widget.RecyclerView>
-                </android.support.v4.widget.NestedScrollView>
-            </android.support.v4.widget.SwipeRefreshLayout>
+                </android.support.v7.widget.RecyclerView>
+            </android.support.v4.widget.NestedScrollView>
         </me.calebjones.pubgtrackerforandroid.ui.views.ExtendedStatefulLayout>
 
 
