--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -29,7 +29,7 @@
                     android:id="@+id/history_recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingBottom="@dimen/material_baseline_grid_8x"
+                    android:paddingBottom="@dimen/material_baseline_grid_10x"
                     android:clipToPadding="false">
 
                 </android.support.v7.widget.RecyclerView>
@@ -135,16 +135,16 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/navigation_view"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="@dimen/material_baseline_grid_8x"
+        android:layout_marginBottom="@dimen/material_baseline_grid_17x"
         android:layout_marginEnd="@dimen/material_baseline_grid_3x"
         android:clickable="true"
-        app:backgroundTint="@color/colorAccentAlt"
+        app:fab_colorNormal="@color/colorAccentAlt"
+        app:fab_colorPressed="@color/colorAccentAltDark"
         app:borderWidth="0dp"
         app:elevation="12dp"
         app:ico_color="@android:color/white"
         app:ico_icon="gmd-filter-list"
         app:ico_size="24dp"
-        app:layout_anchorGravity="bottom|right|end"
-        app:pressedTranslationZ="6dp"
-        app:rippleColor="@color/material_color_white_50_percent" />
+        app:fab_showShadow="true"
+        app:layout_anchorGravity="bottom|right|end" />
 </android.support.design.widget.CoordinatorLayout>
