--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,9 @@
     <color name="colorPrimaryDark">#00796B</color>
     <color name="primary_light">#B2DFDB</color>
     <color name="colorAccent">#2196F3</color>
-    <color name="colorAccentAlt">#EB0011</color>
+    <color name="colorAccentDark">#1976D2</color>
+    <color name="colorAccentAlt">#f44336</color>
+    <color name="colorAccentAltDark">#d50000</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
     <color name="icons">#FFFFFF</color>
