--- a/app/src/main/res/layout/material_drawer_header_custom.xml
+++ b/app/src/main/res/layout/material_drawer_header_custom.xml
@@ -1,7 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/material_drawer_account_header_height"
-    android:clickable="true">
+    android:clickable="true"
+    android:background="@color/colorPrimary">
 
     <ImageView
         android:id="@+id/material_drawer_account_header_background"
