--- a/app/src/main/res/layout/material_drawer_header_custom.xml
+++ b/app/src/main/res/layout/material_drawer_header_custom.xml
@@ -8,7 +8,7 @@
         android:id="@+id/material_drawer_account_header_background"
         android:layout_width="match_parent"
         android:layout_height="@dimen/material_drawer_account_header_height"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerInside" />
 
     <RelativeLayout
         android:id="@+id/material_drawer_account_header"
