--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -65,7 +65,7 @@
                 android:visibility="invisible" />
 
 
-            <com.airbnb.lottie.LottieAnimationVie
+            <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/favorite_icon"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
