--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -26,11 +26,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginBottom="@dimen/material_baseline_grid_1x"
             android:layout_marginTop="@dimen/material_baseline_grid_1x"
-            android:fitsSystemWindows="false"
             android:gravity="center"
+            android:fitsSystemWindows="false"
             android:orientation="vertical">
 
 
@@ -65,10 +64,11 @@
                 android:visibility="invisible" />
 
 
-            <com.airbnb.lottie.LottieAnimationVie
+            <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/favorite_icon"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="64dp"
+                android:layout_height="32dp"
+                android:layout_marginStart="@dimen/material_baseline_grid_0.5x"
                 android:scaleType="centerCrop"
                 app:lottie_fileName="twitter.json"
                 app:lottie_scale="0.08"/>
