--- a/app/src/main/res/layout-v21/fragment_overview.xml
+++ b/app/src/main/res/layout-v21/fragment_overview.xml
@@ -4,8 +4,7 @@
     android:id="@+id/home_coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:theme="@style/AppTheme">
+    android:orientation="vertical">
 
     <me.calebjones.pubgtrackerforandroid.ui.views.ExtendedStatefulLayout
         android:id="@+id/overview_state_view"
