--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,8 +4,7 @@
     android:id="@+id/coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:theme="@style/AppTheme">
+    android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -64,14 +63,12 @@
                 android:visibility="invisible" />
 
 
-            <com.airbnb.lottie.LottieAnimationView
+            <com.mikepenz.iconics.view.IconicsImageView
                 android:id="@+id/favorite_icon"
-                android:layout_width="64dp"
-                android:layout_height="32dp"
-                android:layout_marginStart="@dimen/material_baseline_grid_0.5x"
-                android:scaleType="centerCrop"
-                app:lottie_fileName="twitter.json"
-                app:lottie_scale="0.08"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/material_baseline_grid_0.5x"
+                android:scaleType="centerCrop"/>
 
         </LinearLayout>
 
